# Dice_betting_program

./: Anchor.toml  ReadMe.md
programs/dice_program/: Cargo.toml
programs/dice_program/src/: error.rs  lib.rs
programs/dice_program/src/instructions/: init.rs  mod.rs  place_bet.rs  refund_bet.rs  resolve_bet.rs
programs/dice_program/src/state/: bet.rs
tests/: dice_program.ts
